fix: possible loop between tp and room join